objects/maps__AdvRouteDataSet__c.object
<CustomObject>
    <fields>
        <fullName>maps__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This tells us if the data set is active or needs completed</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__AdvRouteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Advanced Route Template</label>
        <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Data Sets</relationshipLabel>
        <relationshipName>AdvRouteDataSets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__AssignmentFieldApi__c</fullName>
        <label>Assignment Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__AssignmentObjectFieldApi__c</fullName>
        <label>Assignment Object Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__AssignmentObject__c</fullName>
        <label>Assignment Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__AssignmentRelationshipFieldApi__c</fullName>
        <label>Assignment Relationship Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__AssignmentUserFieldFilters__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment User Field Filters</label>
        <referenceTo>maps__AdvRouteQueryFilterGrouping__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Data Sets (Assignment User Field Filters)</relationshipLabel>
        <relationshipName>AdvRouteAssignmentUserFieldFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__BaseObjectFilters__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Object Filters</label>
        <referenceTo>maps__AdvRouteQueryFilterGrouping__c</referenceTo>
        <relationshipLabel>Maps Adv Route Data Sets (Base Obj Filters)</relationshipLabel>
        <relationshipName>AdvRouteDataSetsBaseObjFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__BaseObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Object</label>
        <referenceTo>maps__BaseObject__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Data Sets</relationshipLabel>
        <relationshipName>MapsAdvancedRouteDataSets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__BufferTimeDefault__c</fullName>
        <label>Buffer Time Default</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__BufferTimeFieldApi__c</fullName>
        <label>Buffer Time Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CompletedTabsPicklist__c</fullName>
        <description>These are the completed tabs for the data set</description>
        <label>Completed Tabs Picklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GeneralInfo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__CompletedVisitAssignmentFieldApi__c</fullName>
        <label>Completed Visit Assignment Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CompletedVisitDateTimeFieldApi__c</fullName>
        <label>Completed Visit Date/DateTime Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CompletedVisitFilters__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed Visit Filters</label>
        <referenceTo>maps__AdvRouteQueryFilterGrouping__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Data Sets (Completed Visit Filters)</relationshipLabel>
        <relationshipName>AdvRouteDataSetsCompletedVisitFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__CompletedVisitObjectApi__c</fullName>
        <label>Completed Visit Object Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CompletedVisitRoutedObjFieldApi__c</fullName>
        <label>Completed Visit Routed Obj Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__CreatedFromAdvRouteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created From Template</label>
        <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Data Sets (Created From)</relationshipLabel>
        <relationshipName>AdvRouteDataSetsCreatedFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__DefaultVisitWindows__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Visit Windows</label>
        <referenceTo>maps__AdvRouteVisitWindows__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Data Sets</relationshipLabel>
        <relationshipName>AdvRouteDataSets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__FutureVisitFilters__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Future Visit Filters</label>
        <referenceTo>maps__AdvRouteQueryFilterGrouping__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Data Sets (Future Visit Filters)</relationshipLabel>
        <relationshipName>AdvRouteDataSetsFutureVisitFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__MaxDaysBetweenVisitsDefault__c</fullName>
        <label>Max Days Between Visits Default</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MaxDaysBetweenVisitsFieldApi__c</fullName>
        <label>Max Days Between Visits Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MinDaysBetweenVisitsDefault__c</fullName>
        <label>Min Days Between Visits Default</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MinDaysBetweenVisitsFieldApi__c</fullName>
        <label>Min Days Between Visits Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__OutputDefaultValues__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output Default Values</label>
        <referenceTo>maps__AdvRouteDefaultValuesGrouping__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Data Sets</relationshipLabel>
        <relationshipName>AdvRouteDataSets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Priority__c</fullName>
        <label>Priority</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__SavedQueryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Saved Query</label>
        <referenceTo>maps__MarkerLayer__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Data Sets</relationshipLabel>
        <relationshipName>AdvRouteDataSets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__SuggestedFrequency__c</fullName>
        <label>Suggested Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Tooltip10__c</fullName>
        <label>Tooltip 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Tooltip11__c</fullName>
        <label>Tooltip 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Tooltip12__c</fullName>
        <label>Tooltip 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__UseRelatedAssignmentObject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag tells us if a data set is using a related object as the assignment criteria</description>
        <label>Use Related Assignment Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__VisitDurationDefault__c</fullName>
        <label>Visit Duration Default</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__VisitDurationFieldApi__c</fullName>
        <label>Visit Duration Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__VisitWindowsFieldApi__c</fullName>
        <label>Visit Windows Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps Advanced Route Data Set</label>
    <nameField>
        <label>Maps Advanced Route Data Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Data Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>